chore: update api spec
