# src/generated_api/models/V0BuildCertificateUploadResponseItemModel.ts
@@ -16,65 +16,71 @@ import { mapValues } from '../runtime';
 /**
  * 
  * @export
- * @interface V0BuildCertificateResponseItemModel
+ * @interface V0BuildCertificateUploadResponseItemModel
  */
-export interface V0BuildCertificateResponseItemModel {
+export interface V0BuildCertificateUploadResponseItemModel {
     /**
      * 
      * @type {string}
-     * @memberof V0BuildCertificateResponseItemModel
+     * @memberof V0BuildCertificateUploadResponseItemModel
      */
     certificatePassword?: string;
     /**
      * 
      * @type {boolean}
-     * @memberof V0BuildCertificateResponseItemModel
+     * @memberof V0BuildCertificateUploadResponseItemModel
      */
     isExpose?: boolean;
     /**
      * 
      * @type {boolean}
-     * @memberof V0BuildCertificateResponseItemModel
+     * @memberof V0BuildCertificateUploadResponseItemModel
      */
     isProtected?: boolean;
     /**
      * 
      * @type {boolean}
-     * @memberof V0BuildCertificateResponseItemModel
+     * @memberof V0BuildCertificateUploadResponseItemModel
      */
     processed?: boolean;
     /**
      * 
      * @type {string}
-     * @memberof V0BuildCertificateResponseItemModel
+     * @memberof V0BuildCertificateUploadResponseItemModel
      */
     slug?: string;
     /**
      * 
      * @type {string}
-     * @memberof V0BuildCertificateResponseItemModel
+     * @memberof V0BuildCertificateUploadResponseItemModel
      */
     uploadFileName?: string;
     /**
      * 
      * @type {number}
-     * @memberof V0BuildCertificateResponseItemModel
+     * @memberof V0BuildCertificateUploadResponseItemModel
      */
     uploadFileSize?: number;
+    /**
+     * 
+     * @type {string}
+     * @memberof V0BuildCertificateUploadResponseItemModel
+     */
+    uploadUrl?: string;
 }
 
 /**
- * Check if a given object implements the V0BuildCertificateResponseItemModel interface.
+ * Check if a given object implements the V0BuildCertificateUploadResponseItemModel interface.
  */
-export function instanceOfV0BuildCertificateResponseItemModel(value: object): value is V0BuildCertificateResponseItemModel {
+export function instanceOfV0BuildCertificateUploadResponseItemModel(value: object): value is V0BuildCertificateUploadResponseItemModel {
     return true;
 }
 
-export function V0BuildCertificateResponseItemModelFromJSON(json: any): V0BuildCertificateResponseItemModel {
-    return V0BuildCertificateResponseItemModelFromJSONTyped(json, false);
+export function V0BuildCertificateUploadResponseItemModelFromJSON(json: any): V0BuildCertificateUploadResponseItemModel {
+    return V0BuildCertificateUploadResponseItemModelFromJSONTyped(json, false);
 }
 
-export function V0BuildCertificateResponseItemModelFromJSONTyped(json: any, ignoreDiscriminator: boolean): V0BuildCertificateResponseItemModel {
+export function V0BuildCertificateUploadResponseItemModelFromJSONTyped(json: any, ignoreDiscriminator: boolean): V0BuildCertificateUploadResponseItemModel {
     if (json == null) {
         return json;
     }
@@ -87,14 +93,15 @@ export function V0BuildCertificateResponseItemModelFromJSONTyped(json: any, igno
         'slug': json['slug'] == null ? undefined : json['slug'],
         'uploadFileName': json['upload_file_name'] == null ? undefined : json['upload_file_name'],
         'uploadFileSize': json['upload_file_size'] == null ? undefined : json['upload_file_size'],
+        'uploadUrl': json['upload_url'] == null ? undefined : json['upload_url'],
     };
 }
 
-export function V0BuildCertificateResponseItemModelToJSON(json: any): V0BuildCertificateResponseItemModel {
-    return V0BuildCertificateResponseItemModelToJSONTyped(json, false);
+export function V0BuildCertificateUploadResponseItemModelToJSON(json: any): V0BuildCertificateUploadResponseItemModel {
+    return V0BuildCertificateUploadResponseItemModelToJSONTyped(json, false);
 }
 
-export function V0BuildCertificateResponseItemModelToJSONTyped(value?: V0BuildCertificateResponseItemModel | null, ignoreDiscriminator: boolean = false): any {
+export function V0BuildCertificateUploadResponseItemModelToJSONTyped(value?: V0BuildCertificateUploadResponseItemModel | null, ignoreDiscriminator: boolean = false): any {
     if (value == null) {
         return value;
     }
@@ -108,6 +115,7 @@ export function V0BuildCertificateResponseItemModelToJSONTyped(value?: V0BuildCe
         'slug': value['slug'],
         'upload_file_name': value['uploadFileName'],
         'upload_file_size': value['uploadFileSize'],
+        'upload_url': value['uploadUrl'],
     };
 }
 
